@@ -1,6 +1,12 @@
-// These definitions modified from numarray's Include/numarray/nummacro.h
+/*
 
-// The "64" in this code refers to double precision floating point numbers.
+These definitions were inspired by and originally modified from
+numarray's Include/numarray/nummacro.h
+
+The "64" below refers to double precision floating point numbers. This
+code only works on doubles.
+
+*/
 
 #if defined(SIZEOF_VOID_P)
 #if SIZEOF_VOID_P == 8
@@ -22,20 +28,36 @@ typedef long long                MPL_Int64;
 #endif
 #endif
 
-#if !defined(MPL_isnan64)
+#if !defined(MPL_U64)
 #define MPL_U64(u) (* (MPL_Int64 *) &(u) )
+#endif /* MPL_U64 */
 
+#if !defined(MPL_isnan64)
 #if !defined(_MSC_VER)
 #define MPL_isnan64(u) \
-  ( (( MPL_U64(u) & 0x7ff0000000000000LL) == 0x7ff0000000000000LL)  && ((MPL_U64(u) & 0x000fffffffffffffLL) != 0)) ? 1:0
+  ( (( MPL_U64(u) & 0x7ff0000000000000LL)  == 0x7ff0000000000000LL)  && ((MPL_U64(u) &  0x000fffffffffffffLL) != 0)) ? 1:0
 #else
 #define MPL_isnan64(u) \
   ( (( MPL_U64(u) & 0x7ff0000000000000i64) == 0x7ff0000000000000i64)  && ((MPL_U64(u) & 0x000fffffffffffffi64) != 0)) ? 1:0
 #endif
-
 #endif /* MPL_isnan64 */
 
 #if !defined(MPL_isinf64)
-// This beauty from translated from numpy.
-#define MPL_isinf64(x) (!MPL_isnan64((x)) && MPL_isnan64((x)-(x)))
+#if !defined(_MSC_VER)
+#define MPL_isinf64(u) \
+  ( (( MPL_U64(u) & 0x7ff0000000000000LL)  == 0x7ff0000000000000LL)  && ((MPL_U64(u) &  0x000fffffffffffffLL) == 0)) ? 1:0
+#else
+#define MPL_isinf64(u) \
+  ( (( MPL_U64(u) & 0x7ff0000000000000i64) == 0x7ff0000000000000i64)  && ((MPL_U64(u) & 0x000fffffffffffffi64) == 0)) ? 1:0
 #endif
+#endif /* MPL_isinf64 */
+
+#if !defined(MPL_isfinite64)
+#if !defined(_MSC_VER)
+#define MPL_isfinite64(u) \
+  ( (( MPL_U64(u) & 0x7ff0000000000000LL)  != 0x7ff0000000000000LL)) ? 1:0
+#else
+#define MPL_isfinite64(u) \
+  ( (( MPL_U64(u) & 0x7ff0000000000000i64) != 0x7ff0000000000000i64)) ? 1:0
+#endif
+#endif /* MPL_isfinite64 */
